syntax = "proto3";

package kurrentdb.protocol.v2.indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.Indexes";

import "indexes/shared.proto";

message ListIndexesRequest {
}

message ListIndexesResponse {
  repeated Index indexes = 1;
}

message GetIndexRequest {
  string name = 1;
}

message GetIndexResponse {
  Index index = 1;
}

message Index {
  string name = 1;
  string filter = 2;
  repeated IndexField fields = 3;
  IndexState state = 4;
}
